--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item">
-          <img src="C:\Users\dimas\Documents\sx\fatec\website\UpConstruction\assets\img\sx\1a.jpg" alt="">
+          <img src="\assets\img\sx\1a.jpg" alt="">
         </div>
 
         <div class="carousel-item active">
