--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">UpConstruction</strong> <span>All Rights Reserved</span>
+  <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DSI Engenharia</strong> <span>All Rights Reserved</span>
       </p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
@@ -333,6 +333,8 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
       </div>
     </div>
 
