--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item">
-          <img src="DSI\assets\img\SX\1a.jpg" alt="">
+          <img src="./DSI\assets\img\SX\1a.jpg" alt="">
         </div>
 
         <div class="carousel-item active">
