--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
         </div>
 
         <div class="carousel-item active">
-          <img src="C:\Users\dimas\Documents\sx\fatec\website\UpConstruction\assets\img\sx\2a.jpg" alt="">
+          <img src="assets/img/SX/2a.jpg\2a.jpg" alt="">
         </div>
 
         <div class="carousel-item">
-          <img src="C:\Users\dimas\Documents\sx\fatec\website\UpConstruction\assets\img\sx\3a.jpg" alt="">
+          <img src="assets/img/SX/3a.jpg" alt="">
         </div>
 
         <div class="carousel-item">
-          <img src="C:\Users\dimas\Documents\sx\fatec\website\UpConstruction\assets\img\sx\4a.jpg" alt="">
+          <img src="assets/img/SX/4a.jpg" alt="">
         </div>
 
         <div class="carousel-item">
-          <img src="C:\Users\dimas\Documents\sx\fatec\website\UpConstruction\assets\img\sx\5a.jpg" alt="">
+          <img src="assets/img/SX/5a.jpg" alt="">
         </div>
 
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
