--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="carousel-item active">
-          <img src="assets/img/SX/2a.jpg\2a.jpg" alt="">
+          <img src="assets/img/SX/2a.jpg" alt="">
         </div>
 
         <div class="carousel-item">
@@ -303,8 +303,6 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Sobre nós</a></li>
             <li><a href="#services">Serviços</a></li>
-            <li><a href="#">Termos de Serviço</a></li>
-            <li><a href="#">Politica de Privacidade</a></li>
           </ul>
         </div>
 
